assets/styles.css
* {
  margin: 0;
  padding: 0;
  outline: none;
}

body {
  font: 12pt sans-serif;
  color: #828282;
  background: #fff;
}

h1 {
  padding: 8pt;
  font: 18pt sans-serif;
  color: #4a4a4a;
}

h2 {
  padding: 8pt;
  font: 15pt serif;
  color: #4a4a4a;
}

h3 {
  font: 12pt serif;
  color: #4a4a4a;
}

span + span:before {
  content: ' ';
}

.index {
  position: absolute;
  width: 100%;
  height: 100%;
  flex-direction: column;
  display: flex;
}

.index > header {
  width: 100%;
  padding: 8pt 18pt 12pt;
  border-bottom: solid 1pt #ccc;
  box-shadow: 0 -1pt 2pt 1pt #bfbfbf;
  box-sizing: border-box;
  background: #f9f8f5;
}

.index > header > button {
  margin: 4pt 0;
  width: 26pt;
  height: 26pt;
  border: none;
  outline: none;
  background: url(./refresh.svg);
  background-size: contain;
  float: right;
  display: block;
}

.index > header > h1 {
  padding-bottom: 16pt;
}

.index > header > h1 + input {
  margin: 0 auto;
  padding: 4pt 8pt;
  width: 190pt;
  font-size: 12pt;
  color: #4a4a4a;
  border: solid 1pt #ccc;
  border-radius: 8pt;
  background: #fff;
  display: block;
}

.index > section {
  padding: 12pt 8pt 0;
  flex-grow: 1;
  overflow: scroll;
  scrollbar-width: none;
}

.index > section > ol {
  list-style: none;
}

.index > section > ol > li {
  padding: 8pt 0;
  border-bottom: solid 1pt #ccc;
}

.index > section > ol > li:last-child {
  border: none;
}

.index > section > button {
  position: fixed;
  right: 30pt;
  bottom: 20pt;
  width: 44pt;
  height: 44pt;
  border: none;
  border-radius: 50%;
  outline: none;
  background: #7f7f7f url('./create.svg') no-repeat center;
  background-size: 32pt;
  box-shadow: 0 4pt 6pt 1pt #bfbfbf;
  display: block;
}

.recipe {
  position: absolute;
  width: 100%;
  height: 100%;
  counter-reset: steps;
}

.recipe > header {
  position: fixed;
  width: 100%;
  height: 100%;
  padding: 8pt 18pt 34pt;
  box-sizing: border-box;
  background: #f9f8f5;
  flex-direction: column;
  display: flex;
  z-index: 1;
}

.recipe > header > h2 {
  padding: 0;
  text-align: center;
}

.recipe > header > h2 > span {
  margin: 0 8pt;
  vertical-align: middle;
}

.recipe > header > h2 > button {
  padding: 0 6pt;
  line-height: 15pt;
  vertical-align: middle;
  border: solid 1pt #ccc;
  background: #fff;
}

.recipe > header > ul {
  padding: 0 8pt;
  list-style: none;
  flex-grow: 1;
  overflow: scroll;
  scrollbar-width: none;
}

.recipe > header > ul > li {
  padding: 8pt 0;
  border-bottom: solid 1pt #ccc;
}

.recipe > header > ul > li:last-child {
  border: none;
}

.recipe > section {
  position: absolute;
  top: 100%;
  right: 2pt;
  left: 2pt;
  max-height: 100%;
  padding: 8pt;
  margin-top: -34pt;
  border-radius: 8pt 8pt 0 0;
  box-shadow: 0 0 3pt 0 #bfbfbf;
  box-sizing: border-box;
  background: #fff;
  flex-direction: column;
  display: flex;
  z-index: 2;
}

.recipe > section > h2 {
  padding: 0 8pt;
  height: 26pt;
  border-bottom: solid 1pt #e4e6e7;
  flex-shrink: 0;
}

.recipe > section > ol {
  padding: 0 8pt;
  list-style: none;
  flex-grow: 1;
  overflow: scroll;
  scrollbar-width: none;
}

.recipe > section > ol > li {
  position: relative;
  padding: 12pt 0 32pt 48pt;
  min-height: 36pt;
}

.recipe > section > ol > li:last-child {
  padding-bottom: 0;
}

.recipe > section > ol > li:before {
  position: absolute;
  left: 0; top: 12pt;
  width: 36pt;
  height: 36pt;
  line-height: 36pt;
  font-size: 18pt;
  text-align: center;
  color: #4a4a4a;
  border-radius: 50%;
  background: #d7eeee;
  display: block;
  counter-increment: steps;
  content: counter(steps);
}

.recipe > section > ol > li:after {
  content: ' ';
  position: absolute;
  left: 50%;
  margin: 21pt -50pt 0;
  width: 100pt;
  height: 1pt;
  background: #e4e6e7;
  display: block;
}

.recipe > section > ol > li:last-child:after {
  display: none;
}

.recipe > section h3 + ul {
  margin-top: -2pt;
  padding-bottom: 6pt;
  list-style: none;
}

.recipe > section h3 + ul > li {
  font-size: 11pt;
  display: inline;
}

.recipe > section h3 + ul > li:first-child:before {
  display: none;
}

.recipe > section h3 + ul > li:before {
  padding: 0 2pt;
  content: '•';
}

.form {
  position: absolute;
  width: 100%;
  height: 100%;
  flex-direction: column;
  display: flex;
}

.form > header {
  width: 100%;
  padding: 8pt 18pt 6pt;
  border-bottom: solid 1pt #ccc;
  box-shadow: 0 -1pt 2pt 1pt #bfbfbf;
  box-sizing: border-box;
  background: #f9f8f5;
}

.form > header > h1 {
  padding-bottom: 22pt;
}

.form > header > fieldset {
  margin: 0 8pt 6pt;
  padding: 1pt 14pt;
  font-size: 12pt;
  border-radius: 4pt;
  border: solid 1pt #ccc;
  box-sizing: border-box;
  background: #fff;
  display: flex;
  align-items: baseline;
}

.form > header > fieldset legend {
  padding: 0 3pt;
  font-size: 8pt;
  font-weight: 600;
  text-transform: uppercase;
}

.form > header > fieldset input {
  padding: 5pt 2pt 3pt;
  width: 0;
  font-size: 12pt;
  color: #4a4a4a;
  border: none;
  outline: none;
  background: transparent;
  flex-grow: 1;
}

.form > header > fieldset span {
  font-size: 12pt;
}

.form > header > fieldset[name=servings] { max-width: 120pt; }
.form > header > fieldset[name=servings] input { text-align: end; }

.form > section {
  padding: 12pt 8pt 0;
  flex-grow: 1;
  overflow: scroll;
  scrollbar-width: none;
}

